# spritore

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: release.yml
crates/spritore-cli/: Cargo.toml  README.md
crates/spritore-cli/src/: lib.rs  main.rs
crates/spritore-cli/tests/: cli.rs  library.rs
crates/spritore-core/: Cargo.toml  README.md
crates/spritore-core/examples/: determinism_dump.rs  size_bench.rs
crates/spritore-core/src/: lib.rs  png.rs  potpack.rs
crates/spritore-core/tests/: golden.rs  round_trip.rs
crates/spritore-core/tests/golden/: sprite.json  sprite@2x.json
crates/spritore-wasm/: Cargo.toml  README.md
crates/spritore-wasm/src/: lib.rs
js/: README.md  cli.mjs  index.d.ts  index.mjs  node.mjs  package.json  pnpm-lock.yaml  tsconfig.json
js/scripts/: build.mjs
js/src/: cli.ts  index.ts  node.ts  runtime.ts  types.ts
js/test/: api.test.mjs  api.test.ts  bench.mjs  bench.ts  cli.test.mjs  cli.test.ts  index.js  tsconfig.json
js/test/types/browser/: index.ts  tsconfig.json
js/test/types/node/: index.ts  tsconfig.json
npm/spritore/: README.md  node.mjs  package.json
npm/spritore/scripts/: build.mjs
npm/spritore/test/: api.test.mjs  bench.mjs
