[workspace]
resolver = "3"
# spike/ は git 管理外のローカル実証コード (自前の workspace を持つ standalone crate)
members = [
	"crates/spritore-core",
	"crates/spritore-cli",
	"crates/spritore-wasm",
]
exclude = ["spike"]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kartore/spritore"

[profile.release]
# 決定論とサイズのため最適化設定を固定する (docs/plan.md 参照)
lto = true
codegen-units = 1
