[workspace]
resolver = "3"
members = [
	"crates/spritore-core",
	"crates/spritore-cli",
	"crates/spritore-wasm",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kartore/spritore"
homepage = "https://github.com/Kartore/spritore"
publish = ["crates-io"]

[profile.release]
# 決定論とサイズのため最適化設定を固定する (docs/plan.md 参照)
lto = true
codegen-units = 1
