[package]
name = "spritore-cli"
description = "MapLibre sprite generator — CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spritore"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
spritore-core = { path = "../spritore-core" }
