[package]
name = "spritore-core"
description = "Deterministic MapLibre sprite generation — core logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
miniz_oxide = "0.8"
resvg = { version = "0.45", default-features = false }
thiserror = "2"
zopfli = "0.8"

[dev-dependencies]
png = "0.17"
