[package]
name = "spritore-core"
description = "In-memory SVG rendering and MapLibre sprite sheet generation for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
readme = "README.md"
documentation = "https://docs.rs/spritore-core"
keywords = ["maplibre", "sprite", "svg", "png", "graphics"]
categories = ["graphics", "multimedia::images"]

[dependencies]
miniz_oxide = "0.8"
resvg = { version = "0.45", default-features = false }
thiserror = "2"
zopfli = "0.8"

[dev-dependencies]
png = "0.17"
