[package]
name = "spritore-wasm"
description = "MapLibre sprite generation — wasm-bindgen bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "=0.3.102"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
spritore-core = { path = "../spritore-core" }
wasm-bindgen = "=0.2.125"
