[package]
name = "spritore-wasm"
description = "WebAssembly API for generating MapLibre sprite sheets from SVG icons"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "=0.3.102"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
spritore-core = { path = "../spritore-core" }
wasm-bindgen = "=0.2.125"
